# waver

./: .clang-format  .gitignore  CMakeLists.txt  lexer.hpp  lexer2.hpp  main.cpp  test.cpp
clangd/: compile_commands.json
clangd/.cache/clangd/index/: 32.h.BE751C326FC321AA.idx  64.h.0A8507FEEDFC180D.idx  O1_size.hpp.2692ED85B266D4FF.idx  O1_size.hpp.FEF63EB0D34ACB9B.idx  O1_size_fwd.hpp.6E815927DB1A70AB.idx  O1_size_impl.hpp.9779C7E58971A51D.idx  __msvc_bit_utils.hpp.04976EA7DFE0C0DF.idx  __msvc_chrono.hpp.204BD1F4179262EC.idx  __msvc_filebuf.hpp.BA3B62A46251F133.idx  __msvc_format_ucd_tables.hpp.8B2A8125534110CD.idx  __msvc_formatter.hpp.70922C0E18431B47.idx  __msvc_int128.hpp.3686D034CBF9D2C3.idx  __msvc_iter_core.hpp.64BD3F5A4A21F163.idx  __msvc_minmax.hpp.EDDBB70906AEFAD8.idx  __msvc_print.hpp.7A00D178AA3B3963.idx  __msvc_sanitizer_annotate_container.hpp.9F4DA7756885F747.idx  __msvc_string_view.hpp.32CCFBAB0934DFCF.idx  __msvc_system_error_abi.hpp.6CDF94AAC36CC40B.idx  __msvc_threads_core.hpp.C8B32812767C28F5.idx  __msvc_xlocinfo_types.hpp.C21D89B1DA16CF3C.idx  __stdarg___gnuc_va_list.h.93DCA8F83A857CAD.idx  __stddef_max_align_t.h.10C9AC466362D7C4.idx  __stddef_null.h.423C93C454377650.idx  __stddef_nullptr_t.h.D802033D13BF79FB.idx  __stddef_ptrdiff_t.h.7D5919671E3A868E.idx  __stddef_size_t.h.E58AED6661E98597.idx  __wmmintrin_aes.h.F5A57D7B58AF998C.idx  __wmmintrin_pclmul.h.6CAF90FB180E70EA.idx  _cassert.h.6837675FD9CDE76D.idx  _exception.h.39F3B4AB43753035.idx  _prefix.h.808635C515BFA5E0.idx  _prefix.h.B30CC58E22AA6E19.idx  abi_macros.hpp.53B5A34D283DF358.idx  abi_prefix.hpp.B31B87233534DEDF.idx  abi_suffix.hpp.7A713FE0901C43F4.idx  access.hpp.12A681447A3A55EA.idx  access_rights.hpp.353CBD365AD94054.idx  adcintrin.h.B7EE6F767B3CE03D.idx  add.hpp.24E6E3E8A6DCF226.idx  add_pointer.hpp.E44433956A90B29D.idx  (+1315 more)
cmake/: cpm_fwd.cmake
include/net/ancillarycat/waver/: waver.hpp
include/net/ancillarycat/waver/internal/: components.hpp  config.hpp  contract.hpp  lexer.hpp  meta_elements.hpp  parser.hpp  variadic.h  vcd.hpp  vcd_fwd.hpp  vcdfwd.hpp
old/: lexer_old.hpp
test/: ALU4.json  ALU4.vcd  test.cpp
